add: css & js base

--- a/offer/index.html
+++ b/offer/index.html
@@ -3,8 +3,8 @@
  * @Company: kaochong
  * @Date: 2020-12-11 16:47:27
  * @LastEditors: xiuquanxu
- * @LastEditTime: 2020-12-11 16:47:40
+ * @LastEditTime: 2020-12-12 12:22:03
 -->
 <html>
-    <script src="./generator.js"></script>
+    <script src="./promise.js"></script>
 </html>
